1161 relaxed access to expired accounts

--- a/app/views/impact_cards/initiatives/show.html.erb
+++ b/app/views/impact_cards/initiatives/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <div class="max-lg:hidden text-zinc-950 dark:text-white">
     <%= link_to impact_card_path(@impact_card) do %>
