--- a/app/views/impact_cards/show.html.erb
+++ b/app/views/impact_cards/show.html.erb
@@ -1,4 +1,5 @@
 <%= render 'classic_stylesheet', impact_card: @scorecard, focus_areas: @focus_areas %>
+<%= render 'expiry_warning' %>  
 <div class="mx-auto max-w-6xl">
   <%= render 'impact_cards/summary', impact_card: @scorecard, print_description: true %>
   <%= render 'impact_cards/tabs', impact_card: @scorecard %>
