--- a/app/views/layouts/shared/_sidebar_desktop.html.erb
+++ b/app/views/layouts/shared/_sidebar_desktop.html.erb
@@ -71,7 +71,7 @@
               <hr/>
               <%=
                 dropdown_menu_item do
-                  link_to "My Profile", user_path(current_user), class: "block w-full text-sm"
+                  link_to "My profile", user_path(current_user), class: "block w-full text-sm"
                 end
               %>
 
