--- a/app/views/checklist_items/_link.html.erb
+++ b/app/views/checklist_items/_link.html.erb
@@ -1,8 +1,10 @@
 <div class="flex items-center space-x-2">
   <span class="w-3 h-3 inline-block rounded-sm <%= checklist_list_item_status_color(checklist_item.status) %>"></span>
+
+  <%- path = policy(checklist_item).edit? ? edit_checklist_item_path(checklist_item) : checklist_item_path(checklist_item)  %>
   <%=
     link_to(
-      edit_checklist_item_path(checklist_item),
+      path,
       data: { turbo_frame: dom_id(checklist_item) },
       class: "flex items-center space-x-2 text-gray-700 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-800 rounded-sm #{local_assigns[:link_class]}"
     ) do %>
