--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,6 +2,12 @@
   <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 text-black dark:text-white">Hello, <%= current_user.name %></h1>
   <h2 class="text-lg font-semibold text-zinc-950 sm:text-lg text-black dark:text-white">Welcome to the '<%= current_account&.name %>' workspace</h2>
 
+  <%- if current_account.expired? %>
+    <div class="mt-4 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+      <strong class="font-bold">Your account has expired!</strong>
+      <span class="block sm:inline">Please contact your account administrator to renew your subscription.</span>
+    </div>
+  <% end %>
   <div class="mt-8 flex items-end justify-between">
     <h2 class="text-base/7 font-semibold text-zinc-950 sm:text-sm/6 text-black dark:text-white">Overview</h2>
   </div>
