--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,7 +43,7 @@
 <!-- Feature section -->
 <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-40 lg:px-8">
   <div class="mx-auto max-w-2xl text-center">
-    <h2 class="text-base font-semibold leading-7 text-yellow-400">Create change</h2>
+    <h2 class="text-base font-semibold leading-7 text-yellow-400">Create impact</h2>
     <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
       Address complex problems with the Tool for Systemic Change
     </p>
