--- a/app/views/impact_cards/index.html.erb
+++ b/app/views/impact_cards/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'labels/stylesheet', labels: @communities %>
 <%= render 'labels/stylesheet', labels: @wicked_problems %>
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <div class="flex flex-wrap items-end justify-between gap-4">
     <div class="w-full">
