--- a/app/views/impact_cards/sharing/index.html.erb
+++ b/app/views/impact_cards/sharing/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <%= render 'impact_cards/summary', impact_card: @scorecard, print_description: true %>
   <%= render 'impact_cards/tabs', impact_card: @scorecard %>
