--- a/app/views/impact_cards/stakeholder_network/index.html.erb
+++ b/app/views/impact_cards/stakeholder_network/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'labels/stylesheet', labels: @stakeholder_types %>
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl" data-controller="stakeholder-network">
   <%= render 'impact_cards/summary', impact_card: @scorecard %>
   <%= render 'impact_cards/tabs', impact_card: @scorecard %>
