--- a/app/views/initiatives/show.html.erb
+++ b/app/views/initiatives/show.html.erb
@@ -1,4 +1,5 @@
 <%= render 'labels/stylesheet', labels: @subsystem_tags %>
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <div class="flex flex-wrap items-end justify-between gap-4">
     <div class="w-full">
