--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'labels/stylesheet', labels: @stakeholder_types %>
-
+<%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <div class="flex flex-wrap items-end justify-between gap-4">
     <div class="w-full">
