--- a/app/views/shared/_summary.html.erb
+++ b/app/views/shared/_summary.html.erb
@@ -3,10 +3,10 @@
     <div>
       <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
         <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white print:text-black dark:print:text-black"><%= impact_card.name %></h1>
-        <div class="ml-auto mt-8 flex items-center">
+        <%= link_to root_path, class: "ml-auto mt-8 flex items-center" do %>
           <%= image_tag 'logo-small.png', class: 'h-7 w-7', alt: "Logo for 'Obsekio', the tool for systemic change" %>
           <span class="ml-2 text-black dark:text-white font-extrabold text-lg">Obsekio</span>
-        </div>
+        <% end %>
       </div>
       <div class="mt-2 text-sm/6 text-zinc-500 print:text-black dark:print:text-black <%= local_assigns[:print_description] ? "print:text-black dark:print:text-black" : "print:hidden" %>"><%= sanitize(impact_card.description) %></div>
     </div>
