1161 added data retention policy

--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -31,7 +31,9 @@
 
       <h2 class="text-3x1 font-bold leading-10">2. Intellectual Property Rights</h2>
       <p class="my-4 text-gray-300">
-        Ownership of User Data: Users retain full ownership of any personal data and content they submit or post on the platform. You are responsible for ensuring that your content does not infringe on the intellectual property rights of others and for addressing any copyright claims that may arise from your content.
+        Ownership of User Data: Users retain full ownership of any personal data and content they submit or post on the platform. 
+        You are responsible for ensuring that your content does not infringe on the intellectual property rights of others 
+        and for addressing any copyright claims that may arise from your content.
       </p>
       <p class="my-4 text-gray-300">
         Platform Content: All content created by us, including text, graphics, logos, and software, is the property of our platform or its content suppliers and is protected by intellectual property laws.
@@ -47,6 +49,12 @@
       </p>
       <p class="my-4 text-gray-300">
         Prohibited Content: You agree not to submit any content that is illegal, offensive, or infringes on the rights of others.
+      </p>
+
+      <p class="my-4 text-gray-300">
+        Data Access: You data remains your property. In the case of expired accounts, the platform provides limited, read-only 
+        access to user data to enable users to retrieve or review their data. Refer to our 
+        <%= landing_pages_link_to 'Data Retention Policy', data_retention_path %> for more information.
       </p>
 
       <h2 class="text-3x1 font-bold leading-10">4. Privacy</h2>
