--- a/app/views/home/data_retention.html.erb
+++ b/app/views/home/data_retention.html.erb
@@ -28,7 +28,7 @@
         user confidentiality.
       </p>
       <p class="my-4 text-gray-300">
-        Whever possible, we will notify users of any impending data deletion or anonymisation activities. Users may also
+        Whenever possible, we will notify users of any impending data deletion or anonymisation activities. Users may also
         request the deletion of their data by contacting us via the
         <%= landing_pages_link_to 'Privacy Contact Form', privacy_contacts_path %>.
       </p>
