--- a/app/views/initiatives/index.html.erb
+++ b/app/views/initiatives/index.html.erb
@@ -6,11 +6,16 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Initiatives</h1>
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search initiatives...' } %>
-        <%- if policy(Initiative).create? %>
-          <div>
-            <%= link_to_primary 'Create Initiative', new_initiative_path %>
-          </div>
-        <%- end %>
+        <div class="flex justify-end items-center mb-4 space-x-2">        
+          <%= 
+            link_to_primary("Export", initiatives_path(format: :csv), data: { turbo_stream: false })
+          %>
+          <%- if policy(Initiative).create? %>
+            <div>
+              <%= link_to_primary 'Create Initiative', new_initiative_path %>
+            </div>
+          <%- end %>
+        </div>
       </div>
     </div>
     <ul class="w-full divide-y divide-gray-200 dark:divide-gray-700">
