1106 added impact_card_data_models

--- a/app/views/layouts/shared/_sidebar_desktop.html.erb
+++ b/app/views/layouts/shared/_sidebar_desktop.html.erb
@@ -14,6 +14,7 @@
             <%= render_sidebar_item title: 'Stakeholders', path: organisations_path, icon: :stakeholders, active_group: :stakeholders %>
             <%= render_sidebar_item title: 'Reports', path: reports_path, icon: :reports, active_group: :reports %>
             <%= render_sidebar_item title: 'Team', path: users_path, icon: :teams, active_group: :teams %>
+            <%= render_sidebar_item title: 'Library', path: impact_card_data_models_path, icon: :library, active_group: :library %>
           </ul>
         </li>
         <li>
