--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -3,6 +3,10 @@
   <div class="mx-auto max-w-7xl px-6 pb-8 pt-4 lg:px-8">
     <div class="border-t border-white/10 pt-8 md:flex md:items-center md:justify-between">
       <div class="flex space-x-6 md:order-2">
+        <a href="https://bsky.app/profile/eventidesystems.bsky.social" target="_blank" class="text-gray-500 hover:text-gray-400">
+          <span class="sr-only">Bluesky</span>
+          <%= render_icon :bluesky %>
+        </a>
         <a href="https://www.linkedin.com/company/eventide-systems/" target="_blank" class="text-gray-500 hover:text-gray-400">
           <span class="sr-only">LinkedIn</span>
           <%= render_icon :linked_in %>
