--- a/app/views/impact_cards/_impact_card_type_badge.html.erb
+++ b/app/views/impact_cards/_impact_card_type_badge.html.erb
@@ -1,4 +1,4 @@
 <% badge_background_class = impact_card.type == 'TransitionCard' ? 'bg-teal-600 dark:bg-teal-600' : 'bg-blue-600 dark:bg-blue-600' %>
-<div class="inline-flex rounded-lg items-center justify-center <%= badge_background_class %> text-white" title="Type: <%= impact_card.type.titleize %>">
-  <p class="py-1 px-2 text-xs whitespace-nowrap"><%= impact_card.type.titleize %></p>
+<div class="inline-flex rounded-lg items-center justify-center <%= badge_background_class %> text-white" title="Type: <%= impact_card.impact_card_data_model.name %>">
+  <p class="py-1 px-2 text-xs whitespace-nowrap"><%= impact_card.impact_card_data_model.short_name %></p>
 </div>
