--- a/app/views/impact_card_data_models/_impact_card_data_model.html.erb
+++ b/app/views/impact_card_data_models/_impact_card_data_model.html.erb
@@ -2,7 +2,7 @@
   <%= horizontal_rule %>
   <div class="flex items-center justify-between">
     <div class="flex gap-6 py-6">
-      <%= render partial: 'resource_summary', locals: { name: impact_card_data_model.name, background_color: 'bg-cyan-600' } %>
+      <%= render partial: 'resource_summary', locals: { name: impact_card_data_model.name, dom_id: dom_id(impact_card_data_model) } %>
       <div class="space-y-1.5">
         <div class="text-base/6 font-semibold dark:text-white">
           <%= link_to highlight(impact_card_data_model.name, params.dig(:q, :name_or_description_cont)), impact_card_data_model_path(impact_card_data_model), data: { turbo: false } %>
