--- a/app/views/impact_cards/_tabs.html.erb
+++ b/app/views/impact_cards/_tabs.html.erb
@@ -4,7 +4,7 @@
       <select aria-label="Select a tab" class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-2 pl-3 pr-8 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
         <option>Grid</option>
         <option>Stakeholder Network</option>
-        <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
+        <%- if impact_card.has_thematic_map? %>
           <option>Thematic Map</option>
         <%- end %>
       </select>
@@ -17,7 +17,7 @@
         <!-- Current: "bg-gray-100 text-gray-700", Default: "text-gray-500 hover:text-gray-700" -->
         <%= render_tab_item title: "Grid", path: impact_card_path(impact_card), active_tab: :grid %>
         <%= render_tab_item title: "Stakeholder Network", path: impact_card_stakeholder_network_index_path(impact_card), active_tab: :network %>
-        <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
+        <%- if impact_card.has_thematic_map? %>
           <%= render_tab_item title: "Thematic Map", path: impact_card_thematic_map_index_path(impact_card), active_tab: :thematic_map %>
         <%- end %>
         <%= render_tab_item title: "Sharing", path: impact_card_sharing_index_path(impact_card), active_tab: :sharing %>
