--- a/app/views/impact_card_data_models/index.html.erb
+++ b/app/views/impact_card_data_models/index.html.erb
@@ -1,5 +1,3 @@
-<%#= render 'labels/stylesheet', labels: @communities %>
-<%#= render 'labels/stylesheet', labels: @wicked_problems %>
 <%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
   <div class="flex flex-wrap items-end justify-between gap-4">
@@ -7,9 +5,9 @@
       <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">Library</h1>
       <div class="flex justify-between items-center mt-4">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search data model library...', options: { url: impact_card_data_models_path } } %>
-        <%- if policy(Scorecard).create? %>
+        <%- if policy(ImpactCardDataModel).create? %>
           <div>
-            <%#= link_to_primary 'Create Impact Card', new_impact_card_data_model_path %>
+            <%#= link_to_primary 'Create Impact Card Data Model', new_impact_card_data_model_path %>
           </div>
         <%- end %>
       </div>
