--- a/app/views/impact_card_data_models/_impact_card_data_model.html.erb
+++ b/app/views/impact_card_data_models/_impact_card_data_model.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="flex space-x-2">
-          <%#= render 'impact_card_data_model_type_badge', impact_card_data_model: impact_card_data_model %>
+          <%= render 'impact_card_data_model_type_badge', impact_card_data_model: impact_card_data_model %>
           <%#= render 'label_badge', label: impact_card_data_model.community if impact_card_data_model.community.present? %>
           <%#= render 'label_badge', label: impact_card_data_model.wicked_problem if impact_card_data_model.wicked_problem.present? %>
         </div>
