--- a/app/views/layouts/_mailer.html.erb
+++ b/app/views/layouts/_mailer.html.erb
@@ -10,12 +10,12 @@
   <body>
     <%= yield %>
     <p><img src="cid:logo.png"></p>
-    <p><a href="http://www.wickedlab.com.au/">It's a wicked world - let's change it</a></p>
     <p>
       <em>
-        We acknowledge the Traditional Owners of Kaurna Yerta (Kaurna Country) on which we work, and pay our respects to the
-        Elders, past, present and emerging. We also recognise those stolen from their land and who are finding their way back
-        to country, culture and community.
+        In the spirit of reconciliation Eventide Systems acknowledges the Traditional Custodians of Country 
+        throughout Australia and their connections to land, sea and community. We pay our respect to their 
+        Elders past and present and extend that respect to all Aboriginal and Torres Strait Islander peoples 
+        today.
       </em>
     </p>
   </body>
