1106 SDG import now working

--- a/app/views/impact_card_data_models/_impact_card_data_model_type_badge.html.erb
+++ b/app/views/impact_card_data_models/_impact_card_data_model_type_badge.html.erb
@@ -1,3 +1,3 @@
-<div class="inline-flex rounded-lg items-center justify-center <%= impact_card_data_model_filter_color(impact_card_data_model) %> text-white" title="Type: <%= impact_card_data_model.name %>">
+<div class="inline-flex rounded-lg items-center justify-center <%= impact_card_data_model_filter_color(impact_card_data_model) %>" title="Type: <%= impact_card_data_model.name %>">
   <p class="py-1 px-2 text-xs whitespace-nowrap"><%= impact_card_data_model_filter_label(impact_card_data_model) %></p>
 </div>
