--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -66,7 +66,7 @@
               'form',
               name: 'Cross-Workspace Percent Actual',
               path: cross_workspace_percent_actual_reports_path(format: :xlsx),
-              description: 'Actual Percentage per Transition Card for all workspaces (must have admin role in each workspace).'
+              description: 'Actual Percentage per Impact Card for all workspaces (must have admin role in each workspace).'
             )
           %>
         <% end %>
@@ -77,7 +77,7 @@
               'form',
               name: 'Cross-Workspace Percent Actual Per Focus Area',
               path: cross_workspace_percent_actual_reports_path(format: :xlsx),
-              description: 'Actual Percentage per Transition Card per Focus Area for all workspaces (must have admin role in each workspace).'
+              description: 'Actual Percentage per Impact Card per Focus Area for all workspaces (must have admin role in each workspace).'
             )
           %>
         <% end %>
@@ -88,7 +88,7 @@
               'form',
               name: 'Cross-Workspace Percent Actual Per Focus Area (Tabbed)',
               path: cross_workspace_percent_actual_by_focus_area_tabbed_reports_path(format: :xlsx),
-              description: 'Actual Percentage per Transition Card all workspaces, grouped by Focus Area in separate tabs (must have admin role in each workspace).'
+              description: 'Actual Percentage per Impact Card all workspaces, grouped by Focus Area in separate tabs (must have admin role in each workspace).'
             )
           %>
         <% end %>
