--- a/app/views/workspace_mailer/expiry_warning.html.erb
+++ b/app/views/workspace_mailer/expiry_warning.html.erb
@@ -7,7 +7,7 @@
 <p>If you would like to continue using the Tool please have the <em>Account Owners</em> in your organisation reply to this email and let us know:</p>
 
 <ul>
-  <li>The number of Transition Cards or SDGs Cards you require</li>
+  <li>The number of Impact Cards you require</li>
   <li>The number of User accounts you need</li>
 </ul>
 
