--- a/app/views/shared/_tabs.html.erb
+++ b/app/views/shared/_tabs.html.erb
@@ -4,7 +4,7 @@
       <select aria-label="Select a tab" class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-2 pl-3 pr-8 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
         <option>Grid</option>
         <option>Stakeholder Network</option>
-        <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
+        <%- if impact_card.thematic_map? %>
           <option>Thematic Map</option>
         <%- end %>
         <option>Activity</option>
@@ -18,7 +18,7 @@
         <!-- Current: "bg-gray-100 text-gray-700", Default: "text-gray-500 hover:text-gray-700" -->
         <%= render_tab_item title: "Grid", path: shared_path(impact_card.shared_link_id), active_tab: :grid %>
         <%= render_tab_item title: "Stakeholder Network", path: stakeholder_network_shared_path(impact_card.shared_link_id), active_tab: :network %>
-        <%- if impact_card.is_a?(SustainableDevelopmentGoalAlignmentCard) %>
+        <%- if impact_card.thematic_map? %>
           <%= render_tab_item title: "Thematic Map", path: thematic_map_shared_path(impact_card.shared_link_id), active_tab: :thematic_map %>
         <%- end %>
       </nav>
