1066 added basic data models, added policy links

--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -59,26 +59,48 @@
 
       <h2 class="text-3x1 font-bold leading-10">4. Privacy</h2>
       <p class="my-4 text-gray-300">
-        Data Collection and Use: Our <%= landing_pages_link_to 'Privacy Policy', privacy_path %> outlines how we collect, use,
-        and protect your personal information. By using our platform, you consent to our data practices as described in the 
-        Privacy Policy.
+        Data Collection and Use: Our <%= landing_pages_link_to 'Privacy Policy', privacy_path %> outlines how 
+        we collect, use, and protect your personal information. By using our platform, you consent to our data 
+        practices as described in the Privacy Policy.
       </p>
       <p class="my-4 text-gray-300">
-        Cookies: Our platform uses cookies to enhance user experience. Please refer to our <%= landing_pages_link_to 'Privacy Policy', privacy_path %> 
-        for details on how we use cookies.
+        Cookies: Our platform uses cookies to enhance user experience. Please refer to our 
+        <%= landing_pages_link_to 'Cookies Policy', cookie_path %> for details on how we use cookies.
       </p>
 
       <h2 class="text-3x1 font-bold leading-10">5. Limitation of Liability</h2>
       <p class="my-4 text-gray-300">
-        No Warranties: The platform is provided on an "as-is" and "as-available" basis. We make no warranties or representations regarding the accuracy or completeness of the content on the platform.
+        No Warranties: The platform is provided on an "as-is" and "as-available" basis. We make no warranties 
+        or representations regarding the accuracy or completeness of the content on the platform.
       </p>
       <p class="my-4 text-gray-300">
-        Limitation: We shall not be liable for any direct, indirect, incidental, consequential, or punitive damages arising from your use of the platform.
+        Limitation: We shall not be liable for any direct, indirect, incidental, consequential, or punitive 
+        damages arising from your use of the platform.
       </p>
 
       <h2 class="text-3x1 font-bold leading-10">6. Indemnification</h2>
       <p class="my-4 text-gray-300">
-        You agree to indemnify and hold us harmless from any claims, liabilities, damages, losses, or expenses arising from your use of the platform or violation of these terms.
+        You agree to indemnify and hold us harmless from any claims, liabilities, damages, losses, or 
+        expenses arising from your use of the platform or violation of these terms.
+      </p>
+      <p class="my-4 text-gray-300">
+        By accessing or utilizing any data models hosted on this platform, users agree to indemnify, defend, 
+        and hold Eventide Systems, its affiliates, officers, employees, and partners harmless from any 
+        claims, damages, liabilities, costs, or expenses (including legal fees) arising out of or related to:
+        <ul class="list-disc list-outside text-indent ml-4 mb-4">
+          <li>
+            The user's use or misuse of the data models, including but not limited to any unauthorized use, 
+            infringement of third-party intellectual property rights, or violation of applicable laws or 
+            regulations.
+          </li>
+          <li>
+            Any data or content uploaded or processed through the platform that causes harm or infringes 
+            on the rights of others.
+          </li>
+        </ul>  
+      </p>      
+      <p class="my-4 text-gray-300">
+        This indemnification obligation survives termination of the user's account or use of the platform.
       </p>
 
       <h2 class="text-3x1 font-bold leading-10">7. Changes to These Terms</h2>
