--- a/app/views/layouts/_devise_page.html.erb
+++ b/app/views/layouts/_devise_page.html.erb
@@ -8,5 +8,6 @@
     <div class="bg-white dark:bg-black py-8 px-4 shadow sm:rounded-lg sm:px-10">
       <%= yield %>
     </div>
+    <%= content_for :extra_links %>
   </div>
 </div>
