--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -33,7 +33,7 @@
             <% end %>
 
             <%- if policy(@workspace).edit? %>
-              <%= link_to_primary 'Edit Workspace', edit_workspace_path(@workspace), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+              <%= link_to_primary 'Edit Workspace', edit_workspace_path(@workspace) %>
             <%- end %>
           </div>
         </div>
