--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -18,8 +18,9 @@
       </div>
       <div class="mt-8 text-xs leading-5 text-gray-100 md:order-1 md:mt-0">
         &copy; <%=  Date.today.year %> Eventide Systems Pty Ltd. All rights reserved
-        <%= landing_pages_link_to  'Privacy policy', privacy_path,  class: 'ml-6' %>
-        <%= landing_pages_link_to  'Terms & conditions', terms_path, class: 'ml-6' %>
+        <%= landing_pages_link_to 'Privacy policy', privacy_path,  class: 'ml-6' %>
+        <%= landing_pages_link_to 'Terms & conditions', terms_path, class: 'ml-6' %>
+        <%= landing_pages_link_to 'Takedown policy', takedown_path, class: 'ml-6' %>
       </div>
     </div>
   </div>
