--- a/app/views/impact_card_data_models/show.html.erb
+++ b/app/views/impact_card_data_models/show.html.erb
@@ -1,14 +1,48 @@
 <%= render 'impact_card_data_models/stylesheet', impact_card_data_models: [@impact_card_data_model] %>
 <%= render 'expiry_warning' %>
 <div class="mx-auto max-w-6xl">
-  <div class="flex mt-4">
-    <%= render partial: 'resource_summary', locals: { name: @impact_card_data_model.name, dom_id: dom_id(@impact_card_data_model) } %>
-    <div class="flex-1">
-      <div>
-        <div class="flex flex-wrap gap-x-4 gap-y-2">
-          <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= @impact_card_data_model.name %></h1>
+  <div class="flex flex-wrap items-end justify-between gap-4">
+    <div class="w-full">
+      <%= page_header_tag 'Data Model Details' %>
+      
+      <div class="flex justify-between items-center mt-4">
+        <div class="flex gap-6 py-6">
+          <%= render partial: 'resource_summary', locals: { name: @impact_card_data_model.name, dom_id: dom_id(@impact_card_data_model) } %>
+          <div class="space-y-1.5">
+            <div class="text-base/6 font-semibold dark:text-white">
+              <%= @impact_card_data_model.name %>
+            </div>
+            <div class="text-xs/6 text-zinc-500 min-h-4">
+              <%= @impact_card_data_model.description %>
+            </div>
+            <%= render 'impact_card_data_model_type_badge', impact_card_data_model: @impact_card_data_model %>
+            <%= render 'other_workspace_badge', impact_card_data_model: @impact_card_data_model %>
+          </div>
         </div>
-        <div class="mt-2 text-sm/6 text-zinc-500"><%= @impact_card_data_model.description %></div>
+        <div class="relative">
+          <div class="flex justify-end items-center mb-4 space-x-2">
+            <%- if policy(@impact_card_data_model).copy_to_current_workspace? %>
+              <div class="flex justify-end items-center mb-4">
+                <%= 
+                  button_to_primary(
+                    'Copy to Workspace', 
+                    copy_to_current_workspace_impact_card_data_model_path(@impact_card_data_model), 
+                    method: :post,
+                    data: {
+                      turbo: false
+                    },
+                    title: 'Copy this data model to your current workspace'
+                  )
+                %>
+              </div>
+            <%- end %>
+            <%- if policy(@impact_card_data_model).edit? %>
+              <div class="flex justify-end items-center mb-4">
+                <%= link_to_primary 'Edit Data Model', edit_impact_card_data_model_path(@impact_card_data_model) %>
+              </div>
+            <%- end %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -17,7 +51,9 @@
     <% @impact_card_data_model.focus_area_groups.each do |focus_area_group| %>
       <div class="mb-6">
         <h2 class="text-2xl font-bold text-zinc-950 dark:text-white mb-4" title="<%= focus_area_group.name %>">
-          <span class="w-2 mr-1" style="background-color: <%= focus_area_color(focus_area_group) %>">&nbsp;</span>
+          <%- if focus_area_group.color.present? %>
+            <span class="w-2 mr-1" style="background-color: <%= focus_area_group.color %>">&nbsp;</span>
+          <% end %>
           <%= display_name(focus_area_group) %>
         </h2>
         <%- if focus_area_group.description.present? %>        
@@ -28,7 +64,9 @@
         <% focus_area_group.focus_areas.order(:position).each do |focus_area| %>
           <div class="mb-4 ml-3">
             <h3 class="text-xl font-semibold text-zinc-950 dark:text-white mb-2" title="<%= focus_area.name %>">
-              <span class="w-2 mr-1" style="background-color: <%= focus_area_color(focus_area) %>">&nbsp;</span>
+              <%- if focus_area.color.present? %>
+                <span class="w-2 mr-1" style="background-color: <%= focus_area.color %>">&nbsp;</span>
+              <% end %>
               <%= display_name(focus_area) %>
             </h3>
             <%- if focus_area.description.present? %>        
@@ -36,7 +74,7 @@
                 <%= focus_area.description %>
               </div>
             <% end %>
-            <ul class="list-none pl-4">
+            <ul class="list-disc pl-4">
               <% focus_area.characteristics.each do |characteristic| %>
                 <li class="mt-1 text-zinc-950 dark:text-white" title="<%= characteristic.name %>">
                   <%= display_name(characteristic) %>
