--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,7 @@
 <div class="mx-auto max-w-6xl">
   <div class="flex flex-wrap items-end justify-between gap-4">
     <div class="w-full">
-      <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">
-        <%= @user == current_user ? 'My Profile' : 'Team Member Details' %>
-      </h1>
-
+      <%= page_header_tag(@user == current_user ? 'My Profile' : 'Team Member Details') %>
       <div class="flex justify-between items-center mt-4">
         <div class="flex gap-6 py-6">
           <%= render partial: 'resource_summary', locals: { name: @user.display_name, background_color: 'bg-green-700' } %>
@@ -61,7 +58,7 @@
 
             <%- if policy(@user).edit? %>
               <% edit_title = @user == current_user ? 'Edit Profile' : 'Edit Team Member' %>
-              <%= link_to_primary edit_title, edit_user_path(@user), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+              <%= link_to_primary edit_title, edit_user_path(@user) %>
             <%- end %>
           </div>
         </div>
